--- a/App/App.csproj
+++ b/App/App.csproj
@@ -137,6 +137,7 @@
     <Compile Include="src\GLTexture.cs" />
     <Compile Include="src\GLVertinput.cs" />
     <Compile Include="src\GLVertoutput.cs" />
+    <Compile Include="src\Lexing.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\FXLexer.cs" />
