Update image of window maximize button. Refactoring, optimizations and code documentation.

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -186,6 +186,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="resources\logo.ico" />
+    <Content Include="resources\Normalize.png" />
     <None Include="resources\logo.png" />
     <None Include="resources\Minimize.png" />
     <None Include="resources\Close.png" />
