--- a/App/App.csproj
+++ b/App/App.csproj
@@ -91,21 +91,27 @@
     <Compile Include="src\App.Debug.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="src\CodeEditor.AutoC.cs">
+    <Compile Include="src\controls\ComboBox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\CodeEditor.Events.cs">
+    <Compile Include="src\controls\CodeEditor.AutoC.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\CodeEditor.Find.cs">
+    <Compile Include="src\controls\CodeEditor.Events.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\CodeEditor.Hightlight.cs">
+    <Compile Include="src\controls\CodeEditor.Find.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="src\controls\CodeEditor.Hightlight.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\Compiler.cs" />
+    <Compile Include="src\controls\ToolStrip.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="src\Extensions.cs" />
-    <Compile Include="src\CodeEditor.cs">
+    <Compile Include="src\controls\CodeEditor.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\FXDebugger.cs" />
@@ -122,7 +128,7 @@
     <Compile Include="src\GLCSharp.cs" />
     <Compile Include="src\Dict.cs" />
     <Compile Include="src\CompileException.cs" />
-    <Compile Include="src\GraphicControl.cs">
+    <Compile Include="src\controls\GraphicControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="src\DataXml.cs" />
@@ -140,13 +146,13 @@
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\FXLexer.cs" />
-    <Compile Include="src\TabControl.cs">
+    <Compile Include="src\controls\TabControl.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\TabPage.cs">
+    <Compile Include="src\controls\TabPage.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\Theme.cs" />
+    <Compile Include="src\controls\Theme.cs" />
     <Compile Include="src\Trie.cs" />
     <Compile Include="src\XmlSerializer.cs" />
     <EmbeddedResource Include="src\App.resx">
@@ -180,7 +186,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="src\CodeEditor.Selection.cs">
+    <Compile Include="src\controls\CodeEditor.Selection.cs">
       <SubType>Component</SubType>
     </Compile>
   </ItemGroup>
