--- a/App/App.csproj
+++ b/App/App.csproj
@@ -71,6 +71,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
+    <Reference Include="System.Windows.Forms.CustomTabControl">
+      <HintPath>lib\System.Windows.Forms.CustomTabControl.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
