--- a/App/App.csproj
+++ b/App/App.csproj
@@ -107,27 +107,17 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\Compiler.cs" />
-    <Compile Include="src\controls\CustomTabControl.cs">
+    <Compile Include="src\controls\FXTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\controls\NativeMethods.cs" />
-    <Compile Include="src\controls\TabStyle.cs" />
     <Compile Include="src\controls\TabStyleProvider.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\controls\TabStyleProviders\TabStyleAngledProvider.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="src\controls\TabStyleProviders\TabStyleChromeProvider.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="src\controls\TabStyleProviders\TabStyleDarkProvider.cs">
+    <Compile Include="src\controls\TabStyleProviders\FXTabStyleProvider.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\controls\TabStyleProviders\TabStyleDefaultProvider.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="src\controls\TabStyleProviders\TabStyleIE8Provider.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\controls\TabStyleProviders\TabStyleNoneProvider.cs">
@@ -136,13 +126,6 @@
     <Compile Include="src\controls\TabStyleProviders\TabStyleRoundedProvider.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\controls\TabStyleProviders\TabStyleVisualStudioProvider.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="src\controls\TabStyleProviders\TabStyleVS2010Provider.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="src\controls\ThemedColors.cs" />
     <Compile Include="src\controls\ToolStrip.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -185,9 +168,6 @@
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\FXLexer.cs" />
-    <Compile Include="src\controls\TabControl.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="src\controls\TabPage.cs">
       <SubType>Component</SubType>
     </Compile>
