--- a/App/App.csproj
+++ b/App/App.csproj
@@ -110,6 +110,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\Compiler.cs" />
+    <Compile Include="src\controls\FXScrollBar.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="src\controls\FXTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
