--- a/App/App.csproj
+++ b/App/App.csproj
@@ -138,10 +138,14 @@
     <Compile Include="src\controls\ToolStrip.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\Extensions.cs" />
+    <Compile Include="src\extensions\BinaryReader.cs" />
+    <Compile Include="src\extensions\DropOutStack.cs" />
+    <Compile Include="src\extensions\Extensions.cs" />
     <Compile Include="src\controls\CodeEditor.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="src\extensions\IEnumerable.cs" />
+    <Compile Include="src\extensions\String.cs" />
     <Compile Include="src\FXDebugger.cs" />
     <Compile Include="src\GLInstance.cs" />
     <Compile Include="src\GLReference.cs" />
@@ -154,12 +158,12 @@
     </Compile>
     <Compile Include="src\GLBuffer.cs" />
     <Compile Include="src\GLCSharp.cs" />
-    <Compile Include="src\Dict.cs" />
+    <Compile Include="src\extensions\Dict.cs" />
     <Compile Include="src\CompileException.cs" />
     <Compile Include="src\controls\GraphicControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="src\DataXml.cs" />
+    <Compile Include="src\extensions\DataXml.cs" />
     <Compile Include="src\GLFragoutput.cs" />
     <Compile Include="src\GLImage.cs" />
     <Compile Include="src\GLObject.cs" />
@@ -173,16 +177,16 @@
     <Compile Include="src\controls\ImageViewer.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\Lexing.cs" />
+    <Compile Include="src\controls\Lexing.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\FXLexer.cs" />
+    <Compile Include="src\controls\FXLexer.cs" />
     <Compile Include="src\controls\TabPage.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\controls\Theme.cs" />
-    <Compile Include="src\Trie.cs" />
-    <Compile Include="src\controls\XmlSerializer.cs" />
+    <Compile Include="src\extensions\Trie.cs" />
+    <Compile Include="src\extensions\XmlSerializer.cs" />
     <EmbeddedResource Include="src\App.resx">
       <DependentUpon>App.cs</DependentUpon>
     </EmbeddedResource>
