--- a/App/App.csproj
+++ b/App/App.csproj
@@ -151,6 +151,7 @@
     <Compile Include="src\FXPerf.cs" />
     <Compile Include="src\GLInstance.cs" />
     <Compile Include="src\GLReference.cs" />
+    <Compile Include="src\GLSL.cs" />
     <Compile Include="src\GLText.cs" />
     <Compile Include="src\App.cs">
       <SubType>Form</SubType>
