--- a/App/App.csproj
+++ b/App/App.csproj
@@ -148,7 +148,7 @@
     <Compile Include="src\extensions\IEnumerable.cs" />
     <Compile Include="src\extensions\String.cs" />
     <Compile Include="src\FXDebugger.cs" />
-    <Compile Include="src\FXGlslTypes.cs" />
+    <Compile Include="src\FXDebugShaders.cs" />
     <Compile Include="src\FXPerf.cs" />
     <Compile Include="src\GLInstance.cs" />
     <Compile Include="src\GLReference.cs" />
