Refactoring und small bug fixes. There is a bug in Shader.cs line 251 where int types cannot be converted to sampler types.

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -148,6 +148,7 @@
     <Compile Include="src\extensions\IEnumerable.cs" />
     <Compile Include="src\extensions\String.cs" />
     <Compile Include="src\glsl\Access.cs" />
+    <Compile Include="src\glsl\Debugger.cs" />
     <Compile Include="src\glsl\Qualifiers.cs" />
     <Compile Include="src\glsl\Typedef.cs" />
     <Compile Include="src\FXPerf.cs" />
