--- a/App/App.csproj
+++ b/App/App.csproj
@@ -154,6 +154,7 @@
     </Compile>
     <Compile Include="src\extensions\IEnumerable.cs" />
     <Compile Include="src\extensions\String.cs" />
+    <Compile Include="src\extensions\Sync.cs" />
     <Compile Include="src\glsl\Access.cs" />
     <Compile Include="src\glsl\Debugger.cs" />
     <Compile Include="src\glsl\Qualifiers.cs" />
