Refactoring and documentation

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -146,17 +146,19 @@
     <Compile Include="src\controls\FXToolStrip.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="src\extensions\Array.cs" />
     <Compile Include="src\extensions\BinaryReader.cs" />
-    <Compile Include="src\extensions\Convert.cs" />
     <Compile Include="src\extensions\DropOutStack.cs" />
-    <Compile Include="src\extensions\Extensions.cs" />
+    <Compile Include="src\extensions\MatchCollection.cs" />
     <Compile Include="src\controls\CodeEditor.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\extensions\IEnumerable.cs" />
+    <Compile Include="src\extensions\Memory.cs" />
     <Compile Include="src\extensions\Object.cs" />
     <Compile Include="src\extensions\String.cs" />
     <Compile Include="src\extensions\Sync.cs" />
+    <Compile Include="src\extensions\Type.cs" />
     <Compile Include="src\glsl\Access.cs" />
     <Compile Include="src\glsl\Debugger.cs" />
     <Compile Include="src\glsl\GLU.cs" />
