Added some functionality to StaticCamera. Fixed the tip window bug that removed the focus from the active code editor.

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -72,8 +72,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Runtime" />
-    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
@@ -148,6 +148,7 @@
     </Compile>
     <Compile Include="src\extensions\Array.cs" />
     <Compile Include="src\extensions\BinaryReader.cs" />
+    <Compile Include="src\extensions\Control.cs" />
     <Compile Include="src\extensions\DropOutStack.cs" />
     <Compile Include="src\extensions\MatchCollection.cs" />
     <Compile Include="src\controls\CodeEditor.cs">
