--- a/App/cs_ext.csproj
+++ b/App/cs_ext.csproj
@@ -53,6 +53,7 @@
     <Compile Include="csharp\BufferCamera.cs" />
     <Compile Include="csharp\Converter.cs" />
     <Compile Include="csharp\CsObject.cs" />
+    <Compile Include="csharp\Interpolation.cs" />
     <Compile Include="csharp\PoissonDisc.cs" />
     <Compile Include="csharp\SimpleCamera.cs" />
     <Compile Include="csharp\SpotLight.cs" />
