--- a/App/App.csproj
+++ b/App/App.csproj
@@ -231,6 +231,7 @@
       <DependentUpon>CallTip.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="demos\atlas\quest.tech" />
+    <None Include="demos\atlas\resolution.tech" />
     <None Include="demos\shadow_mapping.tech" />
     <None Include="demos\shadow_mapping_pcf.tech" />
     <None Include="demos\shadow_mapping_pcf2.tech" />
