Unified GLObject and extension constructor. Parameters are now passed via an object. The individual parameters can then be accessed using reflection.

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -147,6 +147,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\extensions\Array.cs" />
+    <Compile Include="src\extensions\Assembly.cs" />
     <Compile Include="src\extensions\BinaryReader.cs" />
     <Compile Include="src\extensions\Dictionary.cs" />
     <Compile Include="src\extensions\DropOutStack.cs" />
@@ -219,6 +220,7 @@
     <Compile Include="src\controls\Theme.cs" />
     <Compile Include="src\extensions\Trie.cs" />
     <Compile Include="src\extensions\XmlSerializer.cs" />
+    <Compile Include="src\util\Params.cs" />
     <EmbeddedResource Include="src\App.resx">
       <DependentUpon>App.cs</DependentUpon>
     </EmbeddedResource>
